--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -1,5 +1,5 @@
 .hero-image {
-  background-image: bg.jpg;
+  background-image: url('bg.jpg');
   background-repeat: none;
   background-position: top center;
   background-attachment: fixed;
