--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -5,8 +5,28 @@
   background-attachment: fixed;
 }
 
+h1 {
+  font-family: 'Raleway', sans-serif;
+}
+h2 {
+  font-family: 'Raleway', sans-serif;
+}
 
+h3 {
+  font-family: 'Noto Sans', sans-serif;
+}
 
+h4 {
+  font-family: 'Raleway', sans-serif;
+}
 
+p {
+  font-family: 'Raleway', sans-serif;
+  font-weight: normal;
+}
 
+span {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+}
 
