--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 .white-text-footer {
-  color: blue;
+  color: white;
 }
 
 h2 {
@@ -40,3 +40,9 @@ span {
   font-weight: bold;
 }
 
+.footer {
+  width: 1100px;
+  height: 20px;
+  background-color: black;
+
+}
