--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -18,7 +18,9 @@ h1 {
 .white-text-footer {
   color: white;
   margin-left: 125px;
-  margin-top: 0px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 h2 {
