--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -3,6 +3,8 @@
   background-repeat: none;
   background-position: top center;
   background-attachment: fixed;
+  width: 1100px;
+  height: 550px;
 }
 
 h1 {
