--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -1,8 +1,8 @@
-.bg.jpg {
+img {
   background-repeat: none;
   background-position: top center;
   background-attachment: fixed;
-  width: 1100px;
+  width: 1000px;
   height: 300px;
 }
 
@@ -47,7 +47,7 @@ span {
 }
 
 .footer {
-  width: 1100px;
+  width: 1000px;
   height: 20px;
   background-color: black;
 
