--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -1,19 +1,23 @@
-img {
-  width: 1000px;
-  height: 300px;
-  background-repeat: none;
-  background-position: top center;
-  background-attachment: fixed;
+html,body {
+  width: 100%;
+  height: 100%;
+}
+
+.top-half {
+  background-image: url("../../designs/assets/bg.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
   font-family: 'Raleway', sans-serif;
-  color: blue;
+  color: white;
   margin-left: 295px;
 }
 
 .white-text-header {
-  color: blue;
+  color: white;
 }
 
 .white-text-footer {
