--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -13,36 +13,51 @@ html,body {
 h1 {
   font-family: 'Raleway', sans-serif;
   color: white;
-  margin-left: 295px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  font-size: 2.5em;
+  margin-bottom: -7px;
 }
 
 .white-text-header {
   color: white;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
 }
 
 .white-text-footer {
   color: white;
-  margin-left: 125px;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  font-size: small;
+  margin-left: 145px;
 }
 
 h2 {
   font-family: 'Raleway', sans-serif;
+  text-align: center;
 }
 
 h3 {
   font-family: 'Noto Sans', sans-serif;
+  font-size: medium;
 }
 
 h4 {
   font-family: 'Raleway', sans-serif;
+  font-size: small;
 }
 
 p {
   font-family: 'Raleway', sans-serif;
   font-weight: normal;
+  text-align: center;
+  font-size: small;
 }
 
 span {
