--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -46,6 +46,7 @@ h2 {
 h3 {
   font-family: 'Noto Sans', sans-serif;
   font-size: medium;
+  margin-top: 0px;
 }
 
 h4 {
@@ -65,6 +66,25 @@ span {
   font-weight: bold;
 }
 
+.middle {
+  width: 1000px;
+  height: 150px;
+  margin-left: 31px;
+}
+
+.box {
+  width: 150px;
+  height: 150px;
+  display: inline-block;
+  background-color: #E6EBF0;
+  border-radius: 50%; 
+  text-align: center;
+}
+
+.fa {
+  color: #8099B2;
+  margin-top: 30px;
+}
 .footer {
   width: 1000px;
   height: 20px;
