--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -41,6 +41,8 @@ h1 {
 h2 {
   font-family: 'Raleway', sans-serif;
   text-align: center;
+  margin-top: 47px;
+  margin-bottom: 14px;
 }
 
 h3 {
@@ -59,6 +61,8 @@ p {
   font-weight: normal;
   text-align: center;
   font-size: small;
+  margin-top: 0px;
+  margin-bottom: 22px;
 }
 
 span {
@@ -67,15 +71,18 @@ span {
 }
 
 .middle {
-  width: 1000px;
+  width: 100%;
   height: 150px;
-  margin-left: 31px;
+  margin-left: 53px;
+  margin-top: 53px;
 }
 
 .box {
   width: 150px;
   height: 150px;
   display: inline-block;
+  margin-right: 80px;
+  margin-left: 80px;
   background-color: #E6EBF0;
   border-radius: 50%; 
   text-align: center;
