--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -72,28 +72,47 @@ span {
 
 .middle {
   width: 100%;
-  height: 150px;
-  margin-left: 53px;
-  margin-top: 53px;
 }
 
 .box {
   width: 150px;
   height: 150px;
   display: inline-block;
-  margin-right: 80px;
-  margin-left: 80px;
   background-color: #E6EBF0;
   border-radius: 50%; 
+  text-align: center;
+}
+
+.circle-wrap {
+  width: 33%;
+  display: inline-block;
   text-align: center;
 }
 
 .fa {
   color: #8099B2;
   margin-top: 30px;
+
+
+.bottom-line {
+  width: 100%;
+  height: 150px;
+  margin-left: 53px;
+  margin-top: 53px;
+}
+
+.boxes {
+  width: 150px;
+  height: 150px;
+  display: inline-block;
+  margin-right: 80px;
+  margin-left: 80px;
+  text-align: center;
+}
+  
 }
 .footer {
-  width: 1000px;
+  width: 100%;
   height: 20px;
   background-color: black;
 
