--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -72,7 +72,10 @@ span {
 
 .middle {
   width: 100%;
+  margin-left: 63px;
+  margin-bottom: 111px;
 }
+
 
 .box {
   width: 150px;
@@ -84,7 +87,7 @@ span {
 }
 
 .circle-wrap {
-  width: 33%;
+  width: 30%;
   display: inline-block;
   text-align: center;
 }
